--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,14 @@ dependencies {
     apt 'com.google.dagger:dagger-compiler:2.2'
     provided 'javax.annotation:jsr250-api:1.0'
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
-    compile 'com.jakewharton:butterknife:8.0.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+    compile 'com.jakewharton:butterknife:8.0.0'
     apt 'com.jakewharton:butterknife-compiler:8.0.0'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'org.greenrobot:greendao:2.2.0'
+    compile 'io.reactivex:rxjava:1.1.0'
+    compile 'io.reactivex:rxandroid:1.1.0'
+//    compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
+    compile 'io.reactivex:rxjava:1.0.10'
 }
