--- a/gradle.properties
+++ b/gradle.properties
@@ -12,8 +12,7 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Fri May 06 08:43:13 CST 2016
-#systemProp.https.proxyPort=8080
-#systemProp.http.proxyHost=109.131.7.11
-#systemProp.https.proxyHost=109.131.7.11
-#systemProp.http.proxyPort=8080
+#Mon May 09 09:03:24 CST 2016
+
+
+org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=2048m
